# codexter

./: .gitignore  CMakeLists.txt  README.md
examples/: echo.txt  echo_repeat.txt
src/: codexter.cpp
